# portfolio-vault

./: .gitignore  HANDOVER.md  TEMPLATE_cover_letter.md  bio.md  brag_sheet.md  experience.md  memraiq_logo.html  overview.md  skills.md
memra-api/: .env.example  DEPLOYMENT.md  Dockerfile  Procfile  README.md  TODO.md  alembic.ini  ingest_cli.py  pyproject.toml  railway.toml
memra-api/data/graphs/8f697a87-f6a6-46d7-ba2a-b1ee4497e797/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json
memra-api/data/graphs/f1a3c9df-3a5b-40e5-af0a-57a02839164e/: graph_chunk_entity_relation.graphml  (+1 more)
memra-api/migrations/: env.py
memra-api/migrations/versions/: 0001_baseline.py  0002_auth_tables.py  0004_org_scoping.py  0006_ai_calls_org.py  0007_user_onboarding.py  0010_document_slug_org_scoped.py  0013_platform_admin.py  0014_paystack_billing.py
memra-api/scripts/: 004_test_lightrag.py  00_migrate_db.py  00_seed_db.py  01_chunk.py  02_embed_and_store.py  03_query.py  send_email.py  test_storage.py
memra-api/src/memra/: __init__.py
memra-api/tests/: conftest.py  test_api_auth.py  test_api_billing.py  test_api_root_and_health.py  test_api_webhooks.py  test_billing_core.py  test_config.py  test_db.py  test_db_models.py  test_dependencies.py  test_deployment_config.py  test_document_service.py  test_domain_models.py  test_limiter.py  test_neo4j_infrastructure.py  test_paystack_service.py  test_platform_auth.py  test_rag_and_org_models.py  test_security.py  test_settings_models.py  test_vector_infrastructure.py  test_webhooks.py
rag/: .env.example  01_chunk.py  02_embed_and_store.py  03_query.py  04_migrate_to_qdrant.py  04_server.py  Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
rag/api/: index.py
rag/app/: cli.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py
rag/app/models/: __init__.py  conversation.py  pipeline.py  query.py  settings.py  vault.py
rag/app/routers/: chat.py  conversations.py  export.py  graph.py  health.py  pipeline.py  query.py  retrieve.py  settings.py  vault.py
rag/app/schemas/: __init__.py  conversation.py  pipeline.py  settings.py  vault.py
rag/app/services/: __init__.py  chat.py  conversations.py  pipeline.py  query.py  settings.py  settings_db.py  vault.py
rag/core/: __init__.py  chat_pipeline.py  costs.py  embedding.py  generation.py  indexer.py  ingestion_service.py  intent.py  lightrag_service.py  retrieval.py  summarizer.py  vault_db.py
rag/data/: chunks.json
rag/migrations/: 001_init.sql  002_add_corpus_id.sql  002_query_logs.sql  003_add_jobs.sql  003_conversations.sql  004_add_ai_calls.sql  004_fix_conversations_tz.sql  005_conversation_summary.sql  006_message_meta.sql  007_message_sources.sql  env.py  script.py.mako
rag/migrations/versions/: 0001_baseline.py  0003_org_tables.py  0005_default_org.py  0008_jobs_org_nullable.py  0009_corpora_table.py  0011_conversation_user_scope.py  0012_user_display_name.py
rag/portfolio_vault/: __init__.py  config.py  database.py  embedding.py  generation.py  indexer.py  retrieval.py
rag/scripts/: 004_test_lightrag.py  00_migrate_db.py  00_seed_db.py  01_chunk.py  02_embed_and_store.py  03_query.py  04_migrate_to_qdrant.py  05_server.py  send_email.py  test_storage.py
rag/src/portfolio_rag/: __init__.py
(+568 files in other folders)
