[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memra*"]

[project]
name = "memra-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "typer>=0.12",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.7",
    "anthropic>=0.50",
    "openai>=1.0",
    "qdrant-client>=1.13",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "cryptography>=42",
    "python-docx>=1.1",
    "markdown>=3.5",
    "weasyprint>=62",
    "slowapi>=0.1.9",
    "lightrag-hku>=1.4.10",
    "tiktoken>=0.7",
    "supabase>=2.0",
    "python-multipart>=0.0.22",
    "chardet>=5.0",
    "alembic>=1.13",
    "jinja2>=3.1",
    "resend>=2.0",
    "pyjwt>=2.8",
    "bcrypt>=4.1"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
memra = "memra.app.core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
