[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]

[project]
name = "portfolio-vault-rag"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.7",
    "anthropic>=0.50",
    "openai>=1.0",
    "qdrant-client>=1.13",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
]
