[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]

[project]
name = "portfolio-vault-rag"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "typer>=0.12",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.7",
    "anthropic>=0.50",
    "openai>=1.0",
    "qdrant-client>=1.13",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "cryptography>=42",
    "python-docx>=1.1",
    "markdown>=3.5",
    "weasyprint>=62",
    "slowapi>=0.1.9",
    "lightrag-hku>=1.4.10",
    "tiktoken>=0.7"
]

[project.scripts]
rag = "app.cli:main"
